# medical-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: docker-smoke.yml  node-ci.yml  python-ci.yml
backend/: Dockerfile  pyproject.toml
backend/ingestion/: __init__.py  articles.json  chromadb.py  chunk.py  embed_and_store.py  fetch.py  ingestion.py  inspect_db.py  run_ingestion.py
backend/rag/: llm.py  retrieve.py  rewrite.py  synthesize.py
backend/src/: __init__.py  config.py  main.py
backend/src/routers/: chat.py  health.py
backend/tests/: test_endpoints.py  test_ingestion.py  test_retrieve.py  test_synthesize.py
docs/: corpus_scope.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.jsx  layout.tsx  page.js  page.tsx
frontend/app/components/: ChatInput.jsx  ChatInput.tsx  Disclaimer.tsx  Message.tsx  MessageBubble.jsx  MessageThread.jsx  MessageThread.tsx  References.tsx
frontend/app/health/: page.js
frontend/lib/: api.ts
