[project]
name = "medical-chat-backend"
version = "0.1.0"
description = "Medical chat backend powered by FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "urllib3>=2.7.0",
    "starlette>=1.0.1",
    "langchain>=1.3.1",
    "langchain-text-splitters>=1.1.2",
    "sentence-transformers>=5.5.1",
    "chromadb>=1.5.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "bandit>=1.7.8",
    "pip-audit>=2.7.0",
    "pip>=26.1",
]
typechecking = [
    "mypy>=1.10.0",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
